# react-with-wasm

./: .gitignore  README.md  package-lock.json  package.json
public/: index.html
src/: App.tsx  bootstrap.js
wasm-lib/: Cargo.toml
wasm-lib/src/: func_plot.rs  lib.rs
